# simpleImageProcessing

./: .gitignore  README.md
BuildScript/: buildApp.sh  copyToHost.sh  startDocker.sh
OutputFromContainer/: processedSampleVideo.avi
simpleImageProcessingApp/: CMakeLists.txt
simpleImageProcessingApp/src/: simpleImageProcessing.cpp
